--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
-    "multer": "1.4.5-lts.1",
+    "multer": "^2.0.0",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   }
